<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/profile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/spacing_small"
                android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
            android:id="@+id/main_item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="@dimen/spacing_medium">

        <TextView
                style="@style/TitleText"
                android:text="@string/my_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/BigTitleText"
                android:id="@+id/month_date"
                android:text="01 DIC/ 29DIC"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/ValuesTitleText"
                android:id="@+id/incomes_value_text_view"
                android:text="120$"
                android:layout_below="@+id/month_date"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/TitleText"
                android:id="@+id/incomes_text_view"
                android:text="@string/incomes"

                android:layout_alignBottom="@id/incomes_value_text_view"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:id="@+id/incomes_bar"
                android:layout_below="@id/incomes_text_view"
                android:layout_width="match_parent"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_height="@dimen/bar_height"/>

        <TextView
                style="@style/ValuesTitleText"
                android:id="@+id/expenses_value_text_view"
                android:text="120$"
                android:layout_below="@id/incomes_bar"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                style="@style/TitleText"
                android:id="@+id/expenses_text_view"
                android:text="@string/expenses"
                android:layout_alignBottom="@id/expenses_value_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <View
                android:id="@+id/expenses_bar"
                android:layout_below="@id/expenses_text_view"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:layout_height="@dimen/bar_height"/>

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/expenses_bar"
                android:layout_marginTop="@dimen/spacing_medium"
                android:padding="@dimen/spacing_medium">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_medium">

                <TextView
                        style="@style/ValuesSpecialTitleText"
                        android:id="@+id/balance_text_view"
                        android:text="500$"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        style="@style/TitleSpecialText"
                        android:id="@+id/my_account_text_view"
                        android:text="@string/my_account"
                        android:layout_width="wrap_content"
                        android:layout_alignBottom="@id/balance_text_view"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/my_account_number_text_view"
                        android:text="* 4242"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_below="@id/my_account_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/available"
                        android:layout_alignBottom="@id/my_account_number_text_view"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


</RelativeLayout>